[package]
name = "jolly"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "small bookmarking launcher for desktop usage, developed with iced"
homepage = "https://github.com/apgoetz/jolly"
documentation = "https://github.com/apgoetz/jolly"
repository = "https://github.com/apgoetz/jolly"
readme = "README.md"
keywords = ["launcher","bookmarks", "iced"]
exclude = ["docs/"]
rust-version = "1.65"

[dependencies]
iced = { version = "0.9.0", features = ["image"] }
iced_native = "0.10.0"
toml = { version = "0.7.1", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "4"
opener = "0.5.0"
urlencoding = "2.1.0"
lazy_static = "1"
csscolorparser = { version = "0.6.2", features = ["serde"] }
dark-light = "1.0.0"
pulldown-cmark = "0.9"
url = "2"
once_cell = "1.18.0"


[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.22"
core-foundation = "0.9"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
freedesktop-icons = "0.2"
xdg-mime = "0.3.3"

[dev-dependencies] 
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
resvg = "0.29.0"
usvg = "0.29.0"
tiny-skia = "0.8.2"
ico = "0.3.0"
winres = "0.1.12"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
	 'UI_ViewManagement'
]
