[package]
name = "jolly"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a bookmark manager meets an application launcher, developed with iced"
homepage = "https://github.com/apgoetz/jolly"
documentation = "https://github.com/apgoetz/jolly"
repository = "https://github.com/apgoetz/jolly"
readme = "README.md"
keywords = ["launcher","bookmarks", "iced"]
exclude = ["docs/"]
rust-version = "1.85"

[dependencies]
iced = { version = "0.13.1", features = ["image", "advanced"] }
toml = { version = "0.7.1", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
opener = "0.6"
urlencoding = "2.1.0"
lazy_static = "1"
csscolorparser = { version = "0.6.2", features = ["serde"] }
dark-light = "1.0.0"
pulldown-cmark = "0.9"
url = "2.5"
once_cell = "1.18.0"
resvg = "0.35.0"
env_logger = "0.10.0"
log = "0.4.19"
which = "4.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3.1"}
objc2-uniform-type-identifiers = {version = "0.3.1"}
objc2-app-kit = { version = "0.3.1", features = ["objc2-uniform-type-identifiers"]}
objc2-core-graphics = "0.3.1"
objc2-core-foundation = {version = "0.3.1", features = ["CFCGTypes"]}


[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
freedesktop-icons = "0.2"
xdg-mime = "0.4.0"


[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
freedesktop-icons = "0.2"
dirs = "5"


[dev-dependencies] 
tempfile = "3"

[build-dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"]}

[target.'cfg(windows)'.build-dependencies]
resvg = "0.35.0"
ico = "0.3.0"
winres = "0.1.12"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
	 'UI_ViewManagement',
         'Win32_UI_Shell',
	 'Win32_UI_Shell_Common',
         'Win32_UI_WindowsAndMessaging',
         'Win32_Foundation',
         'Win32_Graphics_Gdi',
	 'Win32_System_Com',
         'Win32_UI_Controls',
	 'Win32_System_LibraryLoader',
]
